--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^8.0.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
